--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "core-js": "^3.6.4",
+    "express": "^4.17.1",
     "jest": "^25.1.0",
+    "mysql": "^2.18.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.5"
   },
