--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
-    "jest": "^25.1.0",
-    "view-design": "^4.1.2",
     "body-parser": "^1.19.0",
     "core-js": "^3.6.4",
+    "date-fns": "^2.10.0",
     "express": "^4.17.1",
+    "jest": "^25.1.0",
     "mysql": "^2.18.1",
+    "sass": "^1.26.1",
+    "sass-loader": "^8.0.2",
+    "uuid": "^7.0.1",
+    "view-design": "^4.1.2",
     "vue": "^2.6.10",
     "vue-router": "^3.1.5"
   },
