--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^2.10.0",
     "express": "^4.17.1",
     "jest": "^25.1.0",
+    "morgan": "^1.9.1",
     "mysql": "^2.18.1",
     "sass": "^1.26.1",
     "sass-loader": "^8.0.2",
